fix: adjust margin-top and gap of pagination class

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -545,10 +545,10 @@ header {
 
 
 .pagination {
-	margin-top: -5px;
+	margin-top: -10px;
 	display: flex;
 	flex-wrap: nowrap;
-	gap: 10px;
+	gap: 20px;
 }
 
 .button-paginator {
